syntax = "proto3";

package io.iohk.prism.protos;

message Date {
    int32 year = 1; // positive value
    int32 month = 2; // value in the [1, 12] interval
    int32 day = 3; // value in the [1, 31] interval (depending on the month, the max value might be 28
}

enum Ledger {
    UNKNOWN_LEDGER = 0; // Invalid default value
    IN_MEMORY = 1;
    BITCOIN_TESTNET = 2;
    BITCOIN_MAINNET = 3;
    CARDANO_TESTNET = 4;
    CARDANO_MAINNET = 5;
}

message TransactionInfo {
    string id = 1;
    Ledger ledger = 2;
}
