syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.iohk.atala.prism.protos";

package io.iohk.atala.prism.protos;

import "common_models.proto";
import "google/protobuf/timestamp.proto";

// Includes timestamping details about a blockchain's block.
message TimestampInfo {
    reserved 1; // Removed blockTimestamp_deprecated field
    reserved "blockTimestamp_deprecated";

    uint32 blockSequenceNumber = 2; // The transaction index inside the underlying block.
    uint32 operationSequenceNumber = 3; // The operation index inside the AtalaBlock.
    google.protobuf.Timestamp blockTimestamp = 4; // The timestamp provided from the underlying blockchain.
}

// Every key has a single purpose:
enum KeyUsage {
    // UNKNOWN_KEY is an invalid value - Protobuf uses 0 if no value is provided and we want the user to explicitly choose the usage.
    UNKNOWN_KEY = 0;

    // This is the most privileged key-type, when any other key is lost, you could use this to recover the others.
    MASTER_KEY = 1;

    // This key-type is used for issuing credentials only, it should be kept in a safe place
    // to avoid malicious credentials being issued.
    ISSUING_KEY = 2;

    // This key-type is used for end-to-end encrypted communication, whoever wants to send a message should
    // use this key-type to encrypt the content.
    COMMUNICATION_KEY = 3;

    // This key-type is used to authenticate requests or logging into services.
    AUTHENTICATION_KEY = 4;
}

// Holds the necessary data to recover an Elliptic Curve (EC)'s public key.
//
// TODO: Consider renaming this to ECPublicKeyData.
message ECKeyData {
    string curve = 1; // The curve name, like secp256k1.
    bytes x = 2; // The x coordinate, represented as bytes.
    bytes y = 3; // The y coordinate, represented as bytes.
}

// Represents a public key with metadata, necessary for a DID document.
//
// TODO: Consider renaming this to something more specific, like DIDPublicKey.
message PublicKey {
    string id = 1; // The key identifier within the DID Document.
    KeyUsage usage = 2; // The key's purpose.
    TimestampInfo addedOn = 3; // The time when the key was added to the DID Document.
    TimestampInfo revokedOn = 4; // The time when the key was revoked from the DID Document.

    // The key's representation.
    oneof keyData {
        ECKeyData ecKeyData = 8; // The Elliptic Curve (EC) key.
    };
}

// The DID Document's data.
message DIDData {
    string id = 1; // The DID suffix, where DID is in form did:prism.atala:[DID suffix]
    repeated PublicKey publicKeys = 2; // The keys that belong to this DID Document.
}

// The operation to create a public DID.
message CreateDIDOperation {
    DIDData didData = 1; // DIDData with did empty id field
}

// The necessary data to add a key to a DID.
message AddKeyAction {
    PublicKey key = 1; // The key to include.
}

// The necessary data to remove a key from a DID.
message RemoveKeyAction {
    string keyId = 1; // the key id to remove
}

// The potential details that can be updated in a DID.
message UpdateDIDAction {

    // The action to perform.
    oneof action {
        AddKeyAction addKey = 1; // Used to add a new key to the DID.
        RemoveKeyAction removeKey = 2; // Used to remove a key from the DID.
    }
}

// Specifies the necessary data to update a public DID.
message UpdateDIDOperation {
    bytes previousOperationHash = 1; // The hash of the operation that issued the DID.
    string id = 2; // TODO: To be redefined after we start using this operation.
    repeated UpdateDIDAction actions = 3; // The actual updates to perform on the DID.
}

// Represents a credential's batch.
//
// Check the protocol docs to understand it.
message CredentialBatchData {
    string issuerDID = 1; // The DID suffix that issues the credential's batch.
    bytes merkleRoot = 2; // The Merkle root for the credential's batch.
}

// Specifies the data to issue a credential batch.
message IssueCredentialBatchOperation {
    CredentialBatchData credentialBatchData = 1; // The actual credential batch data.
}

// Specifies the credentials to revoke (the whole batch, or just a subset of it).
message RevokeCredentialsOperation {
    bytes previousOperationHash = 1; // The hash of the operation that issued the batch.
    string credentialBatchId = 2; // The corresponding batch ID, as returned in IssueCredentialBatchResponse.
    repeated bytes credentialsToRevoke = 3; // The hashes of the credentials to revoke. If empty, the full batch is revoked.
}

// The possible operations affecting the blockchain.
message AtalaOperation {
    // The actual operation.
    oneof operation {
        // Used to create a public DID.
        CreateDIDOperation createDid = 1;

        // Used to update an existing public DID.
        UpdateDIDOperation updateDid = 2;

        // Used to issue a batch of credentials.
        IssueCredentialBatchOperation issueCredentialBatch = 3;

        // Used to revoke a credential batch.
        RevokeCredentialsOperation revokeCredentials = 4;
    };
}

// A signed operation, necessary to post anything on the blockchain.
message SignedAtalaOperation {
    string signedWith = 1; // The key ID used to sign the operation, it must belong to the DID that signs the operation.
    bytes signature = 2; // The actual signature.
    AtalaOperation operation = 3; // The operation that was signed.
}

// Ledger data associated to a protocol event.
// Note that the difference with TransactionInfo is that this message contains a full
// timestamp, and there is no expectation for it to be optional.
message LedgerData {
    string transactionId = 1; // ID of the transaction.
    Ledger ledger = 2; // Ledger the transaction was published to.
    TimestampInfo timestampInfo = 3; // The timestamp of the protocol event.
}

// Used to encode the responses of the operations issued in an AtalaBlock.
message OperationOutput {
    oneof result {
        // Represents the response provided by IssueCredentialBatchOperation.
        IssueCredentialBatchOutput batchOutput = 1;
        // Represents the response provided by CreateDIDOperation.
        CreateDIDOutput createDIDOutput = 2;
        // Represents the response provided by UpdateDIDOperation.
        UpdateDIDOutput updateDIDOutput = 3;
        // Represents the response provided by RevokeCredentialOperation.
        RevokeCredentialsOutput revokeCredentialsOutput = 4;
    }
}

message IssueCredentialBatchOutput {
    string batchId = 1;
}
message CreateDIDOutput {
    string didSuffix = 1;
}
message UpdateDIDOutput {}
message RevokeCredentialsOutput {}
